--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,24 @@ footer {background-color:#333;}
 	background: -webkit-linear-gradient(top, #ddd, #aaa);	background: -moz-linear-gradient(top, #ddd, #aaa);
 	background: -ms-linear-gradient(top, #ddd, #aaa);	background: -o-linear-gradient(top, #ddd, #aaa);
 	background: linear-gradient(top, #ddd, #aaa);	border: 2px solid #999;}
+#div1{
+ background-color: #CCCCCC;
+ color: #039;
+ text-align: center;
+ height: 900px;
+ width: 1000px;
+ margin-left:auto;
+ margin-right:auto;
+}
+
+
+#div2{
+ background-color: #99FF99;
+ color: #039;
+ text-align: center;
+ height: 600px;
+ width: 500px;
+ margin-left:auto;
+ margin-right:auto;
+}
+
