--- a/css/style.css
+++ b/css/style.css
@@ -196,3 +196,15 @@ footer {background-color:#333;}
  margin-right:auto;
 }
 
+.articulodetalle{
+    width: 980;
+    height: auto;
+
+    border: 4px solid black;
+    margin: 20px opx 20 px;
+
+    border-radius: 8px;
+    background: white;
+   
+
+  }
